* NEW:
   * Added new subtitle formats
   * Edit -> Modify selection
   * Shortcuts keys Ctrl+up/down now move contents in 
     "Multi-Replace" list view - thx Ivandrofly
* IMPROVED:
   * Updated Czech language file - thx Trottel
   * Updated Russian language file - thx Sergey
   * Updated Brazilian Portuguese langauge file - thx Igor
   * Updated German langauge file - thx Siegwarth
   * Updated word lists - thx Siegwarth
   * Minor improvements for EBU open subtitling
   * Added "Allow overlap in waveform" as setting
   * Large "Image compare" OCR databases now loads much faster - thx Zoltan
   * Can now read Russian in Cavena 890
   * Waveform generation now uses current audio track (VLC only atm)
   * Open original subtitle now allows EBU/890/PAC formats - thx Andreas
   * "DCinema SMPTE" format is now valid (uses xsd) - thx Wolfgang
   * Improved italic fix - thx XhmikosR
* FIXED:
   * Crash in export of images - thx Eros UK
   * Crash in OCR via "Image compare" with large image databases - thx Zoltan
   * Improved baseline in export of images - thx THXTEX
   * Fixed duration (in some players) in blu-ray sup export - thx THXTEX
   * Fixed bug in SSA color - thx Stuart
   * Fixed some letters in Cavena 890 format - thx Calle
   * Some fixes/improvements for "Unknown subtitle format importer"
   * Fixed possible crash in TMPlayer format
   * Read of YouTube Annotations time codes without "hour" - thx Joshu
   * Fixed crash in spell check - thx Ruud
   * Fixed Serbian letters in PAC format - thx Arran
   * Can now work with negative time codes in SubRip - thx Salad


3.3.8 (1st September 2013)
* NEW:
   * Added Hungarian language file - thx Zityi
   * Added a few new subtitle formats
   * Added "Tools -> Sort by -> Style" - thx Mike
   * When moving start/end in waveform and holding down the ALT key will now
     move border if the closest subtitle is less than 500 ms away - thx Leon
* IMPROVED:
   * Updated Spanish language file - thx pakitonaranjo